kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zomboid-server 
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:

    matchLabels:
      app: zomboid-server 
      version: v1
  template:
    metadata:
      labels:
        app: zomboid-server 
        version: v1
    spec:
      tolerations:
        - key: medium_workload 
          value: 'true'
          effect: NoExecute
      nodeSelector:
        medium_workload: 'true'
      volumes:
      - name: zomboid-server-volume
        persistentVolumeClaim:
          claimName: zomboid-server-pv-claim-csi
      containers:
      - image: afey/zomboid:latest
        imagePullPolicy: IfNotPresent
        name: zomboid-server 
        ports:
        - containerPort: 8766
          protocol: UDP
        - containerPort: 8767
          protocol: UDP
        - containerPort: 16261
          protocol: UDP
        - containerPort: 16262
        - containerPort: 27015
        resources:
          limits:
            cpu: "2"
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 2Gi
        volumeMounts:
        - mountPath: /server-data
          name: zomboid-server-volume
          subPath: server-data
        - mountPath: /server-files
          name: zomboid-server-volume
          subPath: server-files
