kubernetes/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: zomboid-server
  namespace: default
spec:
  host: zomboid-server
  trafficPolicy:
    tls:
      mode: DISABLE
